# TuneScape

./: .gitignore  AudioLink.pro  BuildHelp.txt  CMakeLists.txt  README.md  TuneScape.pro  common.pri  jsonlistprocessor.cpp  jsonlistprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  radioaudiomanager.cpp  radioaudiomanager.h  radioexplorer.cpp  radioexplorer.h  radiolist.cpp  radiolist.h  radiostations.cpp  res.qrc
.github/workflows/: cmake-multi-platform.yml
TuneScapeCore/: CMakeLists.txt  TuneScapeCore.pro  mainwindow.ui  mini_player.ui  res.qrc
TuneScapeCore/files/: licenses_qtextbrowser.html
TuneScapeCore/include/: AppConfig.h  CMakeLists.txt  Country.h  M3UHandler.h  Menu.h  PlaylistEditor.h  RadioBrowserApi.h  RadioBrowserPlaylistEditor.h  audioprocessor.h  container.h  fft.h  flowlayout.h  radioinfo.h  (+11 more)
TuneScapeTests/: TuneScapeTests.pro  application.properties  tst_tunescapetests.cpp
include/: CmakeLists.txt  IceCastXmlData.h  StreamReader.h  StreamRecorder.h  Theme.h  customcolordelegate.h  icecastxmldata.h  jsonlistprocessor.h  mainwindow.h  radioaudiomanager.h  radioexplorer.h  radioinfo.h  radiolist.h  radiostations.h  streamreader.h  streamrecorder.h  theme.h  trayicon.h
src/: CMakeLists.txt  IceCastXmlData.cpp  StreamReader.cpp  StreamRecorder.cpp  Theme.cpp  TrayIcon.cpp  customcolordelegate.cpp  flowlayout.cpp  icecastxmldata.cpp  jsonlistprocessor.cpp  main.cpp  mainwindow.cpp  radioaudiomanager.cpp  radioexplorer.cpp  radioinfo.cpp  radiolist.cpp  radiostations.cpp  streamreader.cpp  streamrecorder.cpp  theme.cpp  trayicon.cpp
(+40 files in other folders)
